--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,3 @@
-html {
-    background-color: aquamarine;
-}
 header {
     background-color: grey;
 }
@@ -11,9 +8,6 @@ header {
 main {
     background-color: orange;
 }
-footer {
-    background-color: cornsilk;
-}
 
 /*-------------------------------------------------------------------*/
 
@@ -23,7 +17,9 @@ html,body {
     border: 0;
     width: 100vw;
     height: 100vh;
+    background-color: #25292d;
 }
+
 
 header{
     display: flex;
@@ -35,6 +31,10 @@ header{
     align-content: flex-start;
     width: auto;
     padding: 0 10vh;
+
+    border-style: solid;
+    border-width: 0 0 0 thin;
+    /*border-bottom-width: thin;*/
 }
 
 #logo {
@@ -44,9 +44,11 @@ header{
 }
 #logo > img {
     max-height: 96px;
-    max-width: 432px;
+    /*max-width: 432px;*/
+    max-width: 90vw;
+    width: auto;
     object-fit: contain;
-    width: 60vw;
+
 }
 
 #nav-buttons {
@@ -94,13 +96,12 @@ header{
     text-decoration: none;
 }
 
-/*<right-buttons>/userbuttons*/
 #right-buttons>ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333fff;
+    background-color: #333333;
 
     display: flex;
     flex-direction: row;
@@ -116,9 +117,8 @@ header{
 #right-buttons>ul>li {
     margin: 5px;
     float: left;
-    background-color: cornflowerblue;
+    background-color: #777fff;
     flex-grow: 1;
-    width: 5px;
 }
 #right-buttons>li a {
     display: block;
@@ -126,16 +126,16 @@ header{
     text-align: center;
     padding: 16px;
     text-decoration: none;
-    width: 5px;
 }
 
+footer {
+    background-color: #394047;
+}
 
 /*text*/
 html {
     font-size: 30px;
 }
-a {
-    font-size: 1em;
-}
+
 
 /*tmp*/
