--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,14 +1,3 @@
-header {
-    background-color: grey;
-}
-#logo > a > img{
-    background: mediumpurple;
-}
-
-main {
-    background-color: orange;
-}
-
 /*-------------------------------------------------------------------*/
 
 html,body {
@@ -33,8 +22,10 @@ header{
 
     border-style: solid;
     border-width: 0 0 0 thin;
+    border: 5px #ff0000;
     /*border-bottom-width: thin;*/
     order: 1;
+
 }
 
 #logo {
@@ -54,6 +45,8 @@ header{
 #nav-buttons {
     order: 2;
     flex-grow: 1;
+    color: #333333;
+
 }
 
 #right-buttons {
@@ -69,7 +62,6 @@ header{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333333;
 
     display: flex;
     flex-direction: row;
@@ -84,14 +76,17 @@ header{
 #nav-buttons>nav>ul>li {
     margin: 5px;
     float: left;
-    background-color: red;
     flex-grow: 1;
 }
-#nav-buttons>nav>li a {
+#nav-buttons>nav>ul>li>a {
     display: block;
     color: white;
     text-align: center;
     padding: 16px;
+    text-decoration: none;
+}
+
+#nav-buttons>nav>ul>li>a,#right-buttons>ul>li>a,#nav-buttons>nav>ul>li> a:hover,#right-buttons>ul>li> a:hover, #nav-buttons>nav>ul>li> a:visited,#right-buttons>ul>li> a:visited {
     text-decoration: none;
 }
 
@@ -100,7 +95,6 @@ header{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333333;
 
     display: flex;
     flex-direction: row;
@@ -115,7 +109,6 @@ header{
 #right-buttons>ul>li {
     margin: 5px;
     float: left;
-    background-color: #777fff;
     flex-grow: 1;
 }
 #right-buttons>li a {
@@ -126,8 +119,10 @@ header{
     text-decoration: none;
 }
 
-main {text-align: center;
+main {
+    text-align: center;
     order: 2;
+    width: inherit;
 }
 
 footer {
@@ -152,6 +147,7 @@ body {
 /*content*/
 /*product*/
 #productList {
+    /*width: 70v%;*/
     display: flex;
     align-items: flex-start;
     flex-direction: row;
@@ -172,4 +168,14 @@ body {
     margin-top: 10px;
     width: 250px;
     height: 200px;
+}
+
+@font-face {
+    font-family: Multicolore;
+    src: url(/css/Multicolore.otf);
+}
+
+
+html {
+    font-family: Multicolore;
 }
