--- a/public/css/small.css
+++ b/public/css/small.css
@@ -20,5 +20,6 @@ header,#right-buttons,#logo {
     font-size: 2.2vw;
 }
 footer{
-    font-size: 12px;
+    /*font-size: 12px;*/
+    font-size: 18px;
 }
