--- a/public/css/medium.css
+++ b/public/css/medium.css
@@ -5,3 +5,8 @@ footer{
     /*font-size: 13px;*/
     font-size: 20px;
 }
+#productImgInfo {
+    max-height: 50vw;
+    max-width: 50vw;
+    margin: 1em;
+}
